--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   gtag('config', 'AW-16917019072');
 </script>
 
-<<!-- Event snippet for kopi conversion page
+<!-- Event snippet for kopi conversion page
 In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
 <script>
 function gtag_report_conversion(url) {
